2007-10-02  Samuel Thibault  <samuel.thibault@ens-lyon.org>

	* kern/zalloc.c (zget_space): Fix last change.

2007-09-03  Samuel Thibault  <samuel.thibault@ens-lyon.org>

	* kern/zalloc.c (zget_space): Align zalloc_next_space again after
	calling kmem_alloc_wired (which may sleep).

2007-08-16  Samuel Thibault  <samuel.thibault@ens-lyon.org>

	* Makefile.am (clib_routines): Add udivdi3, __udivdi3 and _end. Fix
	edata into _edata.
	(gnumach-undef): Do not remove heading _s.
	(clib-routines.o): Add -lgcc.

2007-07-09  Samuel Thibault  <samuel.thibault@ens-lyon.org>

	* i386/i386/db_interface.c (int_regs): Drop gs and fs fields.
	(kdb_kentry): Get fs and gs from struct i386_interrupt_state instead of
	struct int_regs.
	* i386/i386/kttd_interface.c (int_regs, kttd_netentry): Likewise.
	* i386/i386/locore.S (all_intrs): Save fs and gs and set them to kernel
	segment too.
	(return_to_iret): Restore fs and gs too.
	(return_to_iret_i): Likewise.
	(ast_from_interrupt): Set fs and gs to kernel segment too.
	(kdb_from_iret): Don't save/restore fs and gs either.
	(ttd_from_iret): Likewise.
	* i386/i386/thread.h (i386_interrupt_state): Add gs and fs fields.
	* linux/src/include/asm-i386/irq.h (SAVE_ALL): Set gs to kernel
	segment too.

2007-08-04  Samuel Thibault  <samuel.thibault@ens-lyon.org>

	* i386/i386/locore.S (TIME_TRAP_UENTRY, TIME_TRAP_SENTRY)
	(TIME_TRAP_UEXIT): Use TH_SYSTEM_TIMER instead of old TH_SYS_TIMER.
	(current_tstamp, TIME_TRAP_UENTRY, TIME_TRAP_SENTRY, TIME_TRAP_UEXIT)
	(TIME_INT_ENTRY, TIME_INT_EXIT, timer_switch, start_timer): Use
	EXT(current_tstamp) and EXT(current_timer) instead of _current_tstampt
	and _current_timer.
	* i386/i386/io_perm.c (i386_io_perm_create): Lock io_perm->port, not
	inexistent device->port.
	* i386/i386at/model_dep.c: Make init_alloc_aligned() extern.
	* i386/i386/mp_desc.c: Include <machine/vm_param.h>
	(interrupt_stack_alloc): Call init_alloc_aligned() instead of
	init_alloc().